recursion.lessons.recursion.koch.Koch.scala.error
Koch:12: error: not found: type Red
	setCouleur(couleur:Red)
                           ^Koch:14: error: not found: value angle
	angle(60)
        ^